--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "mongoose": "^6.5.3",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-infinite-scroll-component": "^6.1.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.19.0",
