--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^5.4.1",
+    "@sanity/image-url": "^1.0.2",
+    "groq": "^3.8.2",
     "mongoose": "^6.5.3",
     "next": "12.2.2",
     "react": "18.2.0",
